--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -9,6 +9,9 @@ $enable-print-styles:   true !default;      // true
 $enable-palette:        true !default;      // true
 $enable-sizing:         true !default;      // true
 $enable-bp-smallest:    false !default;     // false
+$enable-rfs-fluid:      false !default;     // false
+$enable-rfs-scale:      false !default;     // false
+
 
 // Color
 // =====
@@ -166,10 +169,10 @@ $grid-breakpoints: (
 // =====
 // Define the maximum width of `.container` for different screen sizes.
 $container-max-widths: (
-    sm: rem-calc(544px),
-    md: rem-calc(720px),
-    lg: rem-calc(960px),
-    xl: rem-calc(1152px)
+    sm: rem(544px),
+    md: rem(720px),
+    lg: rem(960px),
+    xl: rem(1152px)
 ) !default;
 @include _assert-ascending($container-max-widths, "container", "$container-max-widths");
 
@@ -241,12 +244,12 @@ $font-weight-normal:    normal !default;
 $font-weight-bold:      bold !default;
 $font-weight-base:      $font-weight-normal !default;
 
-$font-size-h1:  2.5rem !default;
-$font-size-h2:  2rem !default;
-$font-size-h3:  1.75rem !default;
-$font-size-h4:  1.5rem !default;
-$font-size-h5:  1.25rem !default;
-$font-size-h6:  1rem !default;
+$font-size-h1:  ($font-size-base * 2.5) !default;
+$font-size-h2:  ($font-size-base * 2) !default;
+$font-size-h3:  ($font-size-base * 1.75) !default;
+$font-size-h4:  ($font-size-base * 1.5) !default;
+$font-size-h5:  ($font-size-base * 1.25) !default;
+$font-size-h6:  ($font-size-base * 1) !default;
 
 $headings-margin-bottom:    ($spacer / 2) !default;
 $headings-font-family:      inherit !default;
@@ -254,7 +257,7 @@ $headings-font-weight:      600 !default;
 $headings-line-height:      1.25 !default;
 $headings-color:            inherit !default;
 
-$lead-font-size:    1.25rem !default;
+$lead-font-size:    ($font-size-base * 1.25) !default;
 $lead-font-weight:  600 !default;
 $lead-line-height:  $line-height-base !default;
 
@@ -273,7 +276,7 @@ $hr-spacer-y:       1rem !default;
 $hr-border-color:   rgba(0, 0, 0, .1) !default;
 $hr-border-width:   $border-width !default;
 
-$blockquote-font-size:          1.1875rem !default;
+$blockquote-font-size:          ($font-size-base * 1.1875) !default;
 $blockquote-color:              $body-color !default;
 $blockquote-footer-font-size:   $font-size-base !default;
 $blockquote-footer-color:       $uibase-400 !default;
@@ -281,6 +284,32 @@ $blockquote-footer-color:       $uibase-400 !default;
 $list-inline-padding: .3em !default;
 
 $dt-font-weight:    $font-weight-bold !default;
+
+// Responsive Typography
+// =====
+// **Only one responsive typography method can be enabled.**
+// By default, these are off, resulting in a static font size across all viewport sizes.
+
+// Common settings
+// Only used when one of Responsive Typography methods is enabled.
+$responsive-font-size-minimum-size:     1rem !default;
+$responsive-font-size-generate-static:  true !default;
+
+// Ratioed Responsive Typography
+// Fluidly scales font size ratio by viewport dimension.
+$responsive-font-size-fluid-breakpoint:        bp-to-em(1200px) !default;
+$responsive-font-size-fluid-factor:            5 !default;
+$responsive-font-size-fluid-two-dimensional:   false !default;
+
+// Scaled Responsive Typography
+// Steps font size by breakpoint.
+$responsive-font-size-scale-factor: (
+    xs: .625,
+    sm: .71875,
+    md: .8125,
+    lg: .90625,
+    xl: 1
+) !default;
 
 // Component pieces
 // =====
@@ -313,25 +342,25 @@ $drag-text-shadow:      0 .0625rem 0 #fff !default;
 // 'md' is considered to be the default size, so no classes for this size designator are generated, as in *no* `.btn-md`.
 $component-sizes: (
     xs: (
-        font-size:      .75rem,
+        font-size:      ($font-size-base * .75),
         padding-y:      .1875rem,
         padding-x:      .375rem,
         border-radius:  .1875rem
     ),
     sm: (
-        font-size:      .875rem,
+        font-size:      ($font-size-base * .875),
         padding-y:      .25rem,
         padding-x:      .5rem,
         border-radius:  .1875rem
     ),
     lg: (
-        font-size:      1.125rem,
+        font-size:      ($font-size-base * 1.125),
         padding-y:      .5rem,
         padding-x:      1.125rem,
         border-radius:  .3125rem
     ),
     xl: (
-        font-size:      1.25rem,
+        font-size:      ($font-size-base * 1.25),
         padding-y:      .625rem,
         padding-x:      1.25rem,
         border-radius:  .3125rem
@@ -596,7 +625,7 @@ $switch-active-indicator-box-shadow:    $btn-active-box-shadow !default;
 // Progress bars
 // =====
 $progress-height:               1rem !default;
-$progress-font-size:            .75rem !default;
+$progress-font-size:            ($font-size-base * .75) !default;
 $progress-bg:                   $uibase-50 !default;
 $progress-border-radius:        $border-radius !default;
 $progress-box-shadow:           inset 0 .125rem .125rem rgba(0, 0, 0, .1) !default;
@@ -702,7 +731,7 @@ $dropdown-link-disabled-bg:     $disabled-bg !default;
 $dropdown-item-padding-x:       1.25rem !default;
 $dropdown-item-padding-y:       .1875rem !default;
 
-$dropdown-header-font-size:     .875rem !default;
+$dropdown-header-font-size:     ($font-size-base * .875) !default;
 $dropdown-header-font-weight:   $font-weight-normal !default;
 $dropdown-header-color:         $uibase-400 !default;
 
@@ -752,7 +781,7 @@ $navbar-item-padding-y:             .3125rem !default;
 
 $navbar-brand-padding-y:            .125rem !default;
 $navbar-brand-margin-x:             1rem !default;
-$navbar-brand-font-size:            1.25rem !default;
+$navbar-brand-font-size:            ($font-size-base * 1.25) !default;
 $navbar-brand-font-weight:          $font-weight-bold !default;
 
 $navbar-divider-width:              $border-width !default;
@@ -760,7 +789,7 @@ $navbar-divider-color:              rgba(0, 0, 0, .65) !default;
 $navbar-divider-margin-x:           $navbar-item-padding-x !default;
 $navbar-divider-margin-y:           $navbar-item-padding-y !default;
 
-$navbar-toggle-font-size:           1.25rem !default;
+$navbar-toggle-font-size:           ($font-size-base * 1.25) !default;
 $navbar-toggle-padding-y:           $btn-padding-y !default;
 $navbar-toggle-padding-x:           $btn-padding-x !default;
 $navbar-toggle-border-radius:       $btn-border-radius !default;
@@ -867,12 +896,12 @@ $card-columns-column-gap:   1.25rem !default;
 
 // Tooltips
 // =====
-$tooltip-max-width:     rem-calc(208px) !default;  // 208px=>13rem
+$tooltip-max-width:     rem(208px) !default;  // 208px=>13rem
 $tooltip-padding-y:     .25rem !default;
 $tooltip-padding-x:     .5rem !default;
 $tooltip-margin:        .2rem !default;
 
-$tooltip-font-size:     .875rem !default;
+$tooltip-font-size:     ($font-size-base * .875) !default;
 $tooltip-color:         $white !default;
 $tooltip-bg:            $black !default;
 $tooltip-opacity:       .9 !default;
@@ -887,7 +916,7 @@ $tooltip-arrow-color:   $tooltip-bg !default;
 // =====
 $popover-font-size:             $font-size-base;
 $popover-bg:                    $white !default;
-$popover-max-width:             rem-calc(288px) !default;  // 288px=>18rem
+$popover-max-width:             rem(288px) !default;  // 288px=>18rem
 $popover-border-width:          $border-width !default;
 $popover-border-color:          $uibase-200 !default;
 $popover-border-radius:         .3125rem !default;
@@ -945,9 +974,9 @@ $modal-footer-border-width:     $modal-header-border-width !default;
 $modal-border-radius:           .3rem !default;
 $modal-inner-border-radius:     calc(#{$modal-border-radius} - #{$modal-content-border-width}) !default;
 
-$modal-sm:                      rem-calc(304px) !default; // 304px=>19rem
-$modal-md:                      rem-calc(528px) !default; // 528px=>33rem
-$modal-lg:                      rem-calc(896px) !default; // 896px=>56rem
+$modal-sm:                      rem(304px) !default; // 304px=>19rem
+$modal-md:                      rem(528px) !default; // 528px=>33rem
+$modal-lg:                      rem(896px) !default; // 896px=>56rem
 
 $modal-breakpoint:              sm !default; // When to start scaling up modal width
 $modal-lg-breakpoint:           lg !default; // The minimum breakpoint to allow `.modal-lg`
