--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -279,7 +279,7 @@
 }
 
 #markdown-toc {
-  font-size: .9375rem;
+  font-size: 0.9375rem;
 }
 
 #markdown-toc ul {
@@ -300,7 +300,7 @@
       order: 2;
   padding-top: 1rem;
   padding-bottom: 1rem;
-  font-size: .875rem;
+  font-size: 0.875rem;
 }
 
 .cf-toc .section-toc {
@@ -590,7 +590,7 @@ h4 > code {
 .palette-base,
 .palette-item {
   padding: .5rem 1rem;
-  font-size: .875rem;
+  font-size: 0.875rem;
 }
 
 .palette-base {
@@ -600,7 +600,7 @@ h4 > code {
 .topLink a {
   display: inline-block;
   padding: .15rem .5rem;
-  font-size: .875rem;
+  font-size: 0.875rem;
   color: #c3c3c3;
   text-decoration: none;
   white-space: nowrap;
@@ -2045,7 +2045,7 @@ h4 > code {
   display: block;
   max-width: 100%;
   padding: .25rem;
-  font-size: .9375rem;
+  font-size: 0.9375rem;
   color: #fff;
   text-align: center;
   background-color: rgba(0, 0, 0, 0.65);
